fix bug 534858, r/sr=neil, collapse of thread with killed sub-threads can crash